--- a/com.io7m.jspearmint.analysis/pom.xml
+++ b/com.io7m.jspearmint.analysis/pom.xml
@@ -15,7 +15,7 @@
   <artifactId>com.io7m.jspearmint.analysis</artifactId>
   <description>SPIR-V toolkit (Analysis)</description>
   <name>com.io7m.jspearmint.analysis</name>
-  <url>https://www.github.com/io7m/jspearmint</url>
+  <url>https://www.io7m.com/software/jspearmint</url>
 
   <dependencies>
     <dependency>
