--- a/com.io7m.jspearmint.parser.vanilla/pom.xml
+++ b/com.io7m.jspearmint.parser.vanilla/pom.xml
@@ -15,7 +15,7 @@
   <artifactId>com.io7m.jspearmint.parser.vanilla</artifactId>
   <description>SPIR-V toolkit (Vanilla parser implementation)</description>
   <name>com.io7m.jspearmint.parser.vanilla</name>
-  <url>https://www.github.com/io7m/jspearmint</url>
+  <url>https://www.io7m.com/software/jspearmint</url>
 
   <dependencies>
     <dependency>
